...
            android:fontFamily="@font/lato"
            android:text="@string/steps_title"
            android:textColor="@color/colorText"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/homeDailyStepsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="@string/default_zero_steps"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
...
            android:gravity="center_horizontal"
            android:textSize="45sp"
            android:textColor="@color/colorText"/>
    </LinearLayout>

    <Button
        android:id="@+id/buttonUpdateSteps"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/btn_rounded"
        android:drawableStart="@drawable/ic_refresh_black_24dp"
        android:drawablePadding="5dp"
...
